--- a/src/assets/css/myStyles.css
+++ b/src/assets/css/myStyles.css
@@ -266,13 +266,6 @@ body {
   font-family: Montserrat, sans-serif;
 }
 
-.table-font {
-  color: #80cbc4;
-  font-size: 12px;
-  text-align: center;
-  font-family: Montserrat, sans-serif;
-}
-
 .button-style {
   background: lightbrown;
   border-radius: 30px;
@@ -298,21 +291,6 @@ body {
   padding-top: 0px;
 }
 
-.myTable {
-  width: 80%;
-  table-layout: fixed;
-  height: 40px;
-  text-align: left;
-  padding: 10px;
-}
-
-.table-font {
-  color: #009fdb;
-  font-size: 12px;
-  text-align: center;
-  font-family: Montserrat, sans-serif;
-}
-
 #status_length {
   margin-left: 35px;
   margin-right: 0px;
@@ -323,50 +301,6 @@ body {
   position: relative;
   background: grey;
   font-size: 12px;
-}
-
-#snackbar {
-  visibility: hidden;
-  min-width: 250px;
-  margin-left: -125px;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  border-radius: 2px;
-  padding: 16px;
-  position: fixed;
-  z-index: 1;
-  left: 50%;
-  bottom: 30px;
-  font-size: 17px;
-}
-
-#snackbar.show {
-  visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
-
-#snackbar2 {
-  visibility: hidden;
-  min-width: 250px;
-  margin-left: -125px;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  border-radius: 2px;
-  padding: 16px;
-  position: fixed;
-  z-index: 1;
-  left: 50%;
-  bottom: 30px;
-  font-size: 17px;
-}
-
-#snackbar2.show {
-  visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
 /* Container holding the image and the floating text */
@@ -381,31 +315,6 @@ body {
   position: relative;
   text-align: center;
   color: white;
-}
-
-.results-table {
-  width: 100%;
-  text-align: left;
-  color: #009fdb;
-  font-family: Montserrat, sans-serif;
-  border: 2px solid black;
-}
-
-.results-table,
-th {
-  text-align: left;
-  color: #009fdb;
-  font-size: 12px;
-  font-family: Montserrat, sans-serif;
-}
-
-.results-table,
-td {
-  /*text-align: left;*/
-  color: #009fdb;
-  font-size: 14px;
-  font-family: Montserrat, sans-serif;
-  /*padding-bottom: 10px;*/
 }
 
 .cap {
@@ -445,56 +354,57 @@ td {
   padding-bottom: 10px;
 }
 
-@-webkit-keyframes fadein {
-  from {
-    bottom: 0;
-    opacity: 0;
-  }
-
-  to {
-    bottom: 30px;
-    opacity: 1;
-  }
+.repo-list {
+  list-style: none;
+  padding: 30px;
+  margin: 0px;
+  display: grid;
+  gap: 12px;
 }
 
-@keyframes fadein {
-  from {
-    bottom: 0;
-    opacity: 0;
-  }
-
-  to {
-    bottom: 30px;
-    opacity: 1;
-  }
+.repo-card {
+  background-color: #bcdfa4;
+  border: 1px solid #a05b2e;
+  border-radius: 5px;
+  padding: 20px 16px;
+  text-align: center; /* Centers all text */
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-@-webkit-keyframes fadeout {
-  from {
-    bottom: 30px;
-    opacity: 1;
-  }
-
-  to {
-    bottom: 0;
-    opacity: 0;
-  }
+.repo-card h3 {
+  margin: 0 0 6px;
+  color: #d36937 !important;
+  font-size: 1.1rem;
 }
 
-@keyframes fadeout {
-  from {
-    bottom: 30px;
-    opacity: 1;
-  }
-
-  to {
-    bottom: 0;
-    opacity: 0;
-  }
+.repo-card a {
+  text-decoration: none;
 }
 
-/* Hide first row (ID) in table*/
-.hide-id tr th:nth-child(-n + 1),
-.hide-id tr td:nth-child(-n + 1) {
-  display: none;
+.repo-description {
+  margin: 0;
+  color: #4f4f4f;
+  font-size: 0.95rem;
+  line-height: 1.4;
+}
+
+.repo-card:hover {
+  background-color: #e6e6e6;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.hover-img {
+  width: 160px;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.hover-img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
